--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
+  "name": "vscode-nls-dev",
+  "version": "4.0.4",
+  "description": "Development time npm module to generate strings bundles from Javascript files",
+  "bugs": {
+    "url": "https://github.com/Microsoft/vscode-nls-dev/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/vscode-nls-dev.git"
+  },
+  "license": "MIT",
   "author": "Microsoft Corporation",
+  "main": "./lib/main.js",
+  "typings": "./lib/main",
   "bin": {
     "vscl": "./lib/vscl.js"
   },
-  "bugs": {
-    "url": "https://github.com/Microsoft/vscode-nls-dev/issues"
+  "scripts": {
+    "compile": "tsc -p ./src",
+    "prepublishOnly": "rimraf lib && npm run compile && npm test",
+    "watch": "tsc -w -p ./src"
   },
   "dependencies": {
     "ansi-colors": "4.1.1",
@@ -20,7 +35,6 @@
     "xml2js": "0.5.0",
     "yargs": "17.3.0"
   },
-  "description": "Development time npm module to generate strings bundles from Javascript files",
   "devDependencies": {
     "@types/ansi-colors": "3.2.2",
     "@types/clone": "2.1.0",
@@ -38,19 +52,5 @@
     "@types/yargs": "17.0.7",
     "mocha": "9.2.2",
     "rimraf": "3.0.2"
-  },
-  "license": "MIT",
-  "main": "./lib/main.js",
-  "name": "vscode-nls-dev",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Microsoft/vscode-nls-dev.git"
-  },
-  "scripts": {
-    "compile": "tsc -p ./src",
-    "prepublishOnly": "rimraf lib && npm run compile && npm test",
-    "watch": "tsc -w -p ./src"
-  },
-  "typings": "./lib/main",
-  "version": "4.0.4"
+  }
 }
