--- a/package.json
+++ b/package.json
@@ -1,20 +1,46 @@
 {
 	"name": "vscode-nls-dev",
-	"version": "4.0.4",
+	"version": "0.0.1",
+	"private": false,
 	"description": "Development time npm module to generate strings bundles from Javascript files",
-	"author": "Microsoft Corporation",
-	"license": "MIT",
+	"homepage": "https://github.com/CodeEditorLand/Foundation#readme",
+	"bugs": {
+		"url": "https://github.com/CodeEditorLand/Foundation/issues"
+	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-nls-dev.git"
+		"url": "git+https://github.com/CodeEditorLand/Foundation.git"
 	},
-	"bugs": {
-		"url": "https://github.com/Microsoft/vscode-nls-dev/issues"
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "Playform",
+		"email": "Hello@Playform.Cloud",
+		"url": "https://playform.cloud"
 	},
+	"type": "module",
 	"main": "./lib/main.js",
 	"typings": "./lib/main",
 	"bin": {
 		"vscl": "./lib/vscl.js"
+	},
+	"scripts": {
+		"compile": "tsc -p ./src",
+		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
+		"watch": "tsc -w -p ./src"
+	},
+	"dependencies": {
+		"ansi-colors": "4.1.3",
+		"clone": "2.1.2",
+		"event-stream": "4.0.1",
+		"fancy-log": "2.0.0",
+		"glob": "10.3.10",
+		"iconv-lite": "0.6.3",
+		"is": "3.3.0",
+		"source-map": "0.7.4",
+		"typescript": "5.4.2",
+		"vinyl": "3.0.0",
+		"xml2js": "0.6.2",
+		"yargs": "17.7.2"
 	},
 	"devDependencies": {
 		"@types/ansi-colors": "3.2.2",
@@ -31,31 +57,11 @@
 		"@types/webpack": "5.28.5",
 		"@types/xml2js": "0.4.14",
 		"@types/yargs": "17.0.32",
-		"@typescript-eslint/eslint-plugin": "7.3.1",
-		"@typescript-eslint/parser": "7.3.1",
-		"eslint": "8.57.0",
 		"mocha": "10.3.0",
-		"rimraf": "5.0.5"
+		"rimraf": "5.0.5",
+		"typescript-esbuild": "latest"
 	},
-	"dependencies": {
-		"ansi-colors": "4.1.3",
-		"clone": "2.1.2",
-		"event-stream": "4.0.1",
-		"fancy-log": "2.0.0",
-		"glob": "10.3.10",
-		"iconv-lite": "0.6.3",
-		"is": "3.3.0",
-		"source-map": "0.7.4",
-		"typescript": "5.4.2",
-		"vinyl": "3.0.0",
-		"xml2js": "0.6.2",
-		"yargs": "17.7.2"
-	},
-	"scripts": {
-		"prepublishOnly": "rimraf lib && npm run compile && npm test",
-		"compile": "tsc -p ./src",
-		"watch": "tsc -w -p ./src",
-		"test": "mocha",
-		"lint": "eslint ./src/*.ts"
+	"publishConfig": {
+		"access": "public"
 	}
 }
