--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
 		"@types/yargs": "17.0.32",
 		"mocha": "10.3.0",
 		"rimraf": "5.0.5",
-		"typescript-esbuild": "latest"
+		"typescript-esbuild": "0.4.5"
 	},
 	"publishConfig": {
 		"access": "public"
