--- a/package.json
+++ b/package.json
@@ -1,32 +1,6 @@
 {
-	"name": "vscode-nls-dev",
-	"version": "0.0.1",
-	"private": false,
-	"description": "Development time npm module to generate strings bundles from Javascript files",
-	"homepage": "https://github.com/CodeEditorLand/Foundation#readme",
-	"bugs": {
-		"url": "https://github.com/CodeEditorLand/Foundation/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/CodeEditorLand/Foundation.git"
-	},
-	"license": "SEE LICENSE IN LICENSE",
-	"author": {
-		"name": "Playform",
-		"email": "Hello@Playform.Cloud",
-		"url": "https://playform.cloud"
-	},
-	"type": "module",
-	"main": "./lib/main.js",
-	"typings": "./lib/main",
 	"bin": {
 		"vscl": "./lib/vscl.js"
-	},
-	"scripts": {
-		"compile": "tsc -p ./src",
-		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
-		"watch": "tsc -w -p ./src"
 	},
 	"dependencies": {
 		"ansi-colors": "4.1.3",
@@ -42,6 +16,7 @@
 		"xml2js": "0.6.2",
 		"yargs": "17.7.2"
 	},
+	"description": "Development time npm module to generate strings bundles from Javascript files",
 	"devDependencies": {
 		"@types/ansi-colors": "3.2.2",
 		"@types/clone": "2.1.4",
@@ -61,7 +36,13 @@
 		"rimraf": "5.0.5",
 		"typescript-esbuild": "0.4.5"
 	},
-	"publishConfig": {
-		"access": "public"
-	}
+	"main": "./lib/main.js",
+	"name": "vscode-nls-dev",
+	"scripts": {
+		"compile": "tsc -p ./src",
+		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
+		"watch": "tsc -w -p ./src"
+	},
+	"type": "module",
+	"typings": "./lib/main"
 }
