--- a/package.json
+++ b/package.json
@@ -32,34 +32,34 @@
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
 	"dependencies": {
-		"ansi-colors": "^4.1.1",
-		"clone": "^2.1.2",
-		"event-stream": "^3.3.4",
-		"fancy-log": "^1.3.3",
-		"glob": "^7.2.0",
-		"iconv-lite": "^0.6.3",
-		"is": "^3.3.0",
-		"source-map": "^0.6.1",
-		"vinyl": "^2.2.1",
-		"xml2js": "^0.5.0",
-		"yargs": "^17.3.0"
+		"ansi-colors": "4.1.3",
+		"clone": "2.1.2",
+		"event-stream": "4.0.1",
+		"fancy-log": "2.0.0",
+		"glob": "10.3.12",
+		"iconv-lite": "0.6.3",
+		"is": "3.3.0",
+		"source-map": "0.7.4",
+		"vinyl": "3.0.0",
+		"xml2js": "0.6.2",
+		"yargs": "17.7.2"
 	},
 	"devDependencies": {
 		"@playform/build": "0.0.7",
 		"@playform/document": "0.0.6",
-		"@types/ansi-colors": "^3.2.2",
-		"@types/clone": "^2.1.0",
-		"@types/fancy-log": "^1.3.1",
-		"@types/glob": "^7.1.3",
-		"@types/iconv-lite": "^0.0.1",
-		"@types/minimatch": "^3.0.4",
-		"@types/node": "14.17.1",
-		"@types/source-map": "^0.5.7",
-		"@types/through": "^0.0.29",
-		"@types/vinyl": "^2.0.2",
-		"@types/xml2js": "^0.4.2",
-		"@types/yargs": "^17.0.7",
-		"rimraf": "^3.0.2"
+		"@types/ansi-colors": "3.2.2",
+		"@types/clone": "2.1.4",
+		"@types/fancy-log": "2.0.2",
+		"@types/glob": "8.1.0",
+		"@types/iconv-lite": "0.0.1",
+		"@types/minimatch": "5.1.2",
+		"@types/node": "20.12.7",
+		"@types/source-map": "0.5.7",
+		"@types/through": "0.0.33",
+		"@types/vinyl": "2.0.12",
+		"@types/xml2js": "0.4.14",
+		"@types/yargs": "17.0.32",
+		"rimraf": "5.0.5"
 	},
 	"publishConfig": {
 		"access": "public"
