--- a/package.json
+++ b/package.json
@@ -1,14 +1,35 @@
 {
+	"name": "vscode-nls-dev",
+	"version": "0.0.1",
+	"private": false,
+	"description": "Development time npm module to generate strings bundles from Javascript files",
+	"keywords": [
+		"land"
+	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandNlsDev#readme",
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/LandNlsDev/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/LandNlsDev.git"
+	},
+	"license": "SEE LICENSE IN LICENSE",
 	"author": {
-		"email": "Land@PlayForm.Cloud",
 		"name": "🌆 — Land —",
+		"email": "Land@PlayForm.Cloud",
 		"url": "HTTPS://Land.PlayForm.Cloud"
 	},
+	"type": "module",
+	"main": "./lib/main.js",
+	"typings": "./lib/main",
 	"bin": {
 		"vscl": "./lib/vscl.js"
 	},
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/LandNlsDev/issues"
+	"scripts": {
+		"Document": "Document 'Source/**/*.ts'",
+		"compile": "tsc -p ./src",
+		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
 	"dependencies": {
 		"ansi-colors": "4.1.3",
@@ -23,7 +44,6 @@
 		"xml2js": "0.6.2",
 		"yargs": "17.7.2"
 	},
-	"description": "Development time npm module to generate strings bundles from Javascript files",
 	"devDependencies": {
 		"@playform/build": "0.0.7",
 		"@playform/document": "0.0.6",
@@ -41,27 +61,7 @@
 		"@types/yargs": "17.0.32",
 		"rimraf": "5.0.5"
 	},
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandNlsDev#readme",
-	"keywords": [
-		"land"
-	],
-	"license": "SEE LICENSE IN LICENSE",
-	"main": "./lib/main.js",
-	"name": "vscode-nls-dev",
-	"private": false,
 	"publishConfig": {
 		"access": "public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/LandNlsDev.git"
-	},
-	"scripts": {
-		"Document": "Document 'Source/**/*.ts'",
-		"compile": "tsc -p ./src",
-		"prepublishOnly": "Build 'Source/**/*.ts'"
-	},
-	"type": "module",
-	"typings": "./lib/main",
-	"version": "0.0.1"
+	}
 }
