--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
 		"vscl": "./lib/vscl.js"
 	},
 	"dependencies": {
-		"ansi-colors": "^4.1.3",
-		"clone": "^2.1.2",
-		"event-stream": "^4.0.1",
-		"fancy-log": "^2.0.0",
-		"glob": "^10.4.1",
-		"iconv-lite": "^0.6.3",
-		"is": "^3.3.0",
-		"source-map": "^0.7.4",
-		"vinyl": "^3.0.0",
-		"xml2js": "^0.6.2",
-		"yargs": "^17.7.2"
+		"ansi-colors": "4.1.3",
+		"clone": "2.1.2",
+		"event-stream": "4.0.1",
+		"fancy-log": "2.0.0",
+		"glob": "10.4.1",
+		"iconv-lite": "0.6.3",
+		"is": "3.3.0",
+		"source-map": "0.7.4",
+		"vinyl": "3.0.0",
+		"xml2js": "0.6.2",
+		"yargs": "17.7.2"
 	},
 	"description": "Development time npm module to generate strings bundles from Javascript files",
 	"devDependencies": {
-		"@types/ansi-colors": "^3.2.2",
-		"@types/clone": "^2.1.4",
-		"@types/fancy-log": "^2.0.2",
-		"@types/glob": "^8.1.0",
-		"@types/iconv-lite": "^0.0.1",
-		"@types/minimatch": "^5.1.2",
+		"@types/ansi-colors": "3.2.2",
+		"@types/clone": "2.1.4",
+		"@types/fancy-log": "2.0.2",
+		"@types/glob": "8.1.0",
+		"@types/iconv-lite": "0.0.1",
+		"@types/minimatch": "5.1.2",
 		"@types/node": "20.14.2",
-		"@types/source-map": "^0.5.7",
-		"@types/through": "^0.0.33",
-		"@types/vinyl": "^2.0.12",
-		"@types/xml2js": "^0.4.14",
-		"@types/yargs": "^17.0.32",
-		"rimraf": "^5.0.7"
+		"@types/source-map": "0.5.7",
+		"@types/through": "0.0.33",
+		"@types/vinyl": "2.0.12",
+		"@types/xml2js": "0.4.14",
+		"@types/yargs": "17.0.32",
+		"rimraf": "5.0.7"
 	},
 	"main": "./lib/main.js",
 	"name": "vscode-nls-dev",
