--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
 		"vscl": "./lib/vscl.js"
 	},
 	"dependencies": {
-		"ansi-colors": "^4.1.1",
-		"clone": "^2.1.2",
-		"event-stream": "^3.3.4",
-		"fancy-log": "^1.3.3",
-		"glob": "^7.2.0",
-		"iconv-lite": "^0.6.3",
-		"is": "^3.3.0",
-		"source-map": "^0.6.1",
-		"vinyl": "^2.2.1",
-		"xml2js": "^0.5.0",
-		"yargs": "^17.3.0"
+		"ansi-colors": "4.1.1",
+		"clone": "2.1.2",
+		"event-stream": "3.3.4",
+		"fancy-log": "1.3.3",
+		"glob": "7.2.0",
+		"iconv-lite": "0.6.3",
+		"is": "3.3.0",
+		"source-map": "0.6.1",
+		"vinyl": "2.2.1",
+		"xml2js": "0.5.0",
+		"yargs": "17.3.0"
 	},
 	"description": "Development time npm module to generate strings bundles from Javascript files",
 	"devDependencies": {
-		"@types/ansi-colors": "^3.2.2",
-		"@types/clone": "^2.1.0",
-		"@types/fancy-log": "^1.3.1",
-		"@types/glob": "^7.1.3",
-		"@types/iconv-lite": "^0.0.1",
-		"@types/minimatch": "^3.0.4",
+		"@types/ansi-colors": "3.2.2",
+		"@types/clone": "2.1.0",
+		"@types/fancy-log": "1.3.1",
+		"@types/glob": "7.1.3",
+		"@types/iconv-lite": "0.0.1",
+		"@types/minimatch": "3.0.4",
 		"@types/node": "14.17.1",
-		"@types/source-map": "^0.5.7",
-		"@types/through": "^0.0.29",
-		"@types/vinyl": "^2.0.2",
-		"@types/xml2js": "^0.4.2",
-		"@types/yargs": "^17.0.7",
-		"rimraf": "^3.0.2"
+		"@types/source-map": "0.5.7",
+		"@types/through": "0.0.29",
+		"@types/vinyl": "2.0.2",
+		"@types/xml2js": "0.4.2",
+		"@types/yargs": "17.0.7",
+		"rimraf": "3.0.2"
 	},
 	"main": "./lib/main.js",
 	"name": "vscode-nls-dev",
