--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"glob": "11.0.0",
 		"iconv-lite": "0.6.3",
 		"is": "3.3.0",
-		"source-map": "0.8.0-beta.0",
+		"source-map": "0.7.4",
 		"vinyl": "3.0.0",
 		"xml2js": "0.6.2",
 		"yargs": "17.7.2"
