--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"rimraf": "6.0.1"
 	},
 	"main": "./lib/main.js",
-	"name": "vscode-nls-dev",
+	"name": "@codeeditorland/nls-dev",
 	"scripts": {
 		"compile": "tsc -p ./src",
 		"prepublishOnly": "rimraf lib && npm run compile && npm test"
